--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,6 +10,8 @@
   <ion-searchbar placeholder="Buscar filme" showCancelButton="always"></ion-searchbar>
 
   <ion-list>
+
+    <ion-item-sliding>
     <ion-item lines="full">
       <ion-thumbnail slot="start">
         <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/hgQDWqPegnDSFg7XlKMTxZ7VIX0.jpg" />
@@ -26,5 +28,13 @@
         <ion-label>98%</ion-label>
       </ion-chip>
     </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option (click)="exibirAlertaFavorito()">
+        <ion-icon slot="icon-only" name="star"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
   </ion-list>
+
+  
 </ion-content>
