--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,5 +74,21 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+    /** laranja cor nova criada **/
+  --ion-color-laranja: #e87c17;
+  --ion-color-laranja-rgb: 232,124,23;
+  --ion-color-laranja-contrast: #000000;
+  --ion-color-laranja-contrast-rgb: 0,0,0;
+  --ion-color-laranja-shade: #cc6d14;
+  --ion-color-laranja-tint: #ea892e;
 }
 
+.ion-color-laranja {
+  --ion-color-base: var(--ion-color-laranja);
+  --ion-color-base-rgb: var(--ion-color-laranja-rgb);
+  --ion-color-contrast: var(--ion-color-laranja-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-laranja-contrast-rgb);
+  --ion-color-shade: var(--ion-color-laranja-shade);
+  --ion-color-tint: var(--ion-color-laranja-tint);
+}
