--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -6,6 +6,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-searchbar
+    (ionChange)="buscarFilmes($event)"
     placeholder="Buscar filme"
     showCancelButton="always"
   ></ion-searchbar>
