--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -30,10 +30,10 @@
         <ion-label  class="ion-text-wrap">
           <div>
             <h1>{{filme.title}}</h1>
-            <p>{{filme.release_date}}</p>
+            <p>{{filme.release_date | date: 'shortDate'}}</p>
             <p>Popularidade - {{filme.popularity}}</p>
-            <ion-badge color="light" *ngFor="let genero of filme.genre_ids"
-              >{{genero}}</ion-badge
+            <ion-badge color="light" *ngFor="let idGenero of filme.genre_ids"
+              >{{generos[idGenero]}}</ion-badge
             >
           </div>
         </ion-label>
